msg: throw a system error when center.init fails

In the libcephfs test case, it will run handreds of threads in
parallel, it will possibly reach the open files limit, but there
won't useful logs about what has happened.

This will just throw a system error, just like:

C++ exception with description "(24) Too many open files" thrown in the test body.

Fixes: https://tracker.ceph.com/issues/43039
Signed-off-by: Xiubo Li <xiubli@redhat.com>
(cherry picked from commit 633805060a1002c86570fe50d099e0c1e223e2d7)